approve remains reject request complete

--- a/test/studentTest.html
+++ b/test/studentTest.html
@@ -31,7 +31,16 @@
         </ul>
     </div>
     <!-- end of sidebar -->
-
+       
+                                    <!-- <div class="description">
+                                        <h1>Here are the rules for weekend Exeat Request</h1>
+                                        <span>
+                                            1. You can only request once a month <br>
+                                            2. It is advised to request between Mon-Wed<br>
+                                            3. You are to return to school on or before your endDate<br>
+                                            4. Do not leave the school until your status says <h2 style="color: green;" >Approved </h2>
+                                        </span>
+                                    </div> -->
     <!-- NavBar -->
     <div class="content">
         <nav>
